--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "next": "15.0.3",
-    "prisma": "^6.0.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next-auth": "^4.24.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sqlite3": "^5.1.7",
     "styled-components": "^6.1.13",
     "swr": "^2.2.5",
     "tailwind": "^4.0.0"
